#56 fixed bug on line spacing of image description

--- a/article/static/article/css/article.less
+++ b/article/static/article/css/article.less
@@ -184,111 +184,111 @@
     line-height: 1.6;
 
     p {
-	      text-align: justify;
+      text-align: justify;
     }
 
     .well {
-	      margin: 0px 0px 20px 20px;
-	      padding: 10px;
+      margin: 0px 0px 20px 20px;
+      padding: 10px;
     }
 
     blockquote {
-	      color: #101010;
-	      font-size: 1.6em;
-	      border: none;
-	      font-style: italic;
-	      font-weight: bold;
-	      margin: 10px 0;
-	      padding: 10px;
-	      text-align: center;
-	      display: block;
+      color: #101010;
+      font-size: 1.6em;
+      border: none;
+      font-style: italic;
+      font-weight: bold;
+      margin: 10px 0;
+      padding: 10px;
+      text-align: center;
+      display: block;
 
-	      &:before {
-	          content: open-quote;
-	      }
-	      &:after {
-	          content: close-quote;
-	      }
+      &:before {
+          content: open-quote;
+      }
+      &:after {
+          content: close-quote;
+      }
     }
 
     .translator_bio, .author_bio {
-        margin: 1.5em 0;
+      margin: 1.5em 0;
     }
 }
 
 .rich-text {
-  p.MsoNormal.center.paragraph-holder{
-      line-height: 23px;
+  p.p3.center.paragraph-holder{
+    line-height: 23px;
   }
-    img {
-	      max-width: 100%;
-	      height: auto;
+  img {
+    max-width: 100%;
+    height: auto;
 
-	      &.left {
-	          float: left;
-	          margin-right: 20px;
-	      }
-
-	      &.right {
-	          float: right;
-	          margin-left: 20px;
-	      }
-
-	      &.full-width {
-	          clear: both;
-	      }
+    &.left {
+        float: left;
+        margin-right: 20px;
     }
 
-      .paragraph-holder{
-        width: 80%;
-        padding-left: 20%;
-      }
-      .rich-text-image-holder{
-        max-width:100%;
-      }
-    p {
-      text-align: left;
-      i{
-        margin-top: 2px;
-      }
-      i{
-        &.fa-expand {
-          font-size: 2em;
-          color: white;
-          background-color: #151414;
-          opacity: 0.6;
-          float: right;
-          position: absolute;
-          right: 0;
-          padding: 10px;
-        }
-      }
+    &.right {
+        float: right;
+        margin-left: 20px;
     }
 
-    ul {
-	      list-style-type: disc;
+    &.full-width {
+        clear: both;
     }
+  }
 
-    .center {
-      text-align: center;
-      color: grey;
-      font-size: small;
-      i{
-        font-style: normal;
+  .paragraph-holder{
+    width: 80%;
+    padding-left: 20%;
+  }
+  .rich-text-image-holder{
+    max-width:100%;
+  }
+  p {
+    text-align: left;
+    i{
+      margin-top: 2px;
+    }
+    i{
+      &.fa-expand {
+        font-size: 2em;
+        color: white;
+        background-color: #151414;
+        opacity: 0.6;
+        float: right;
+        position: absolute;
+        right: 0;
+        padding: 10px;
       }
     }
+  }
 
-    .left {
-	      text-align: left;
-    }
+  ul {
+    list-style-type: disc;
+  }
 
-    .right {
-	      text-align: right;
+  .center {
+    text-align: center;
+    color: grey;
+    font-size: small;
+    i{
+      font-style: normal;
     }
+  }
 
-    .justify {
-	      text-align: justify;
-    }
+  .left {
+        text-align: left;
+  }
+
+  .right {
+        text-align: right;
+  }
+
+  .justify {
+        text-align: justify;
+  }
 }
 
 .responsive-object {
